--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,28 @@
 [build-system]
-requires = ["setuptools", "torch"]
-build-backend = "setuptools.build_meta"
+requires = ["scikit-build-core", "pybind11"]
+build-backend = "scikit_build_core.build"
+
+
+[project]
+name = "xlpd"
+version = "0.1.12"
+description = "A minimal example package (with pybind11)"
+readme = "README.md"
+authors = [{ name = "Yinchu Xia", email = "sales@pytorchsoft.com" }]
+requires-python = ">=3.9"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
+
+[tool.scikit-build]
+cmake.args = [
+    "-DCMAKE_CUDA_ARCHITECTURES=120a",
+    "-DCMAKE_CUDA_COMPILER=/usr/local/cuda/bin/nvcc",
+    "-DCMAKE_PREFIX_PATH=.venv/lib/python3.12/site-packages",
+]
+
+[project.scripts]
+xlpd = "xlpd.add:cli"
