--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "xlpd"
-version = "0.1.12"
+version = "0.1.13"
 description = "A minimal example package (with pybind11)"
 readme = "README.md"
 authors = [{ name = "Yinchu Xia", email = "sales@pytorchsoft.com" }]
@@ -19,7 +19,7 @@ classifiers = [
 
 [tool.scikit-build]
 cmake.args = [
-    "-DCMAKE_CUDA_ARCHITECTURES=120a",
+    "-DCMAKE_CUDA_ARCHITECTURES=75;80;86;89;90;120a",
     "-DCMAKE_CUDA_COMPILER=/usr/local/cuda/bin/nvcc",
     "-DCMAKE_PREFIX_PATH=.venv/lib/python3.12/site-packages",
 ]
